# HPGe-simulation

./: CMakeLists.txt  DetectorConstruction-HPGe.FCStd  DetectorConstruction-HPGe.FCStd1  HPGe-simulation-data.py  HPGe-source10cm.gdml  HPGe-source15cm-noChamfer.gdml  HPGe-source15cm.gdml  HPGe-source20cm.gdml  HPGe-source5cm.gdml  HPGe.cc  README  run1.mac  source-calibration-test.mac  vis.mac
include/: DetHit.hh  DetectorConstruction.hh  EventAction.hh  ModularPhysicsList.hh  PrimaryGeneratorAction.hh.hardcore  RunAction.hh  SD.hh  SteppingAction.hh
src/: ActionInitialization.cc  DetHit.cc  DetectorConstruction.cc  ElectromagneticPhysics.cc  EventAction.cc  HadronElasticPhysicsHP.cc  ModularPhysicsList.cc  PhysicsList.cc  PrimaryGeneratorAction.cc.hardcore  RunAction.cc  SD.cc  SteppingAction.cc
